--- a/ios/stramplerbande/stramplerbandeDebug.entitlements
+++ b/ios/stramplerbande/stramplerbandeDebug.entitlements
@@ -4,5 +4,9 @@
 <dict>
 	<key>aps-environment</key>
 	<string>development</string>
+	<key>keychain-access-groups</key>
+	<array>
+		<string>$(AppIdentifierPrefix)org.reactjs.native.example.stramplerbande</string>
+	</array>
 </dict>
 </plist>
