--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@react-native-community/async-storage": "^1.6.2",
     "@react-native-firebase/app": "^6.0.3",
     "@react-native-firebase/messaging": "^6.0.3",
+    "axios": "^0.19.0",
     "react": "16.9.0",
-    "react-native": "0.61.3"
+    "react-native": "0.61.3",
+    "react-native-status-bar-height": "^2.4.0",
+    "react-native-webview": "^7.4.3"
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
