--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.19.0",
     "react": "16.9.0",
     "react-native": "0.61.3",
+    "react-native-permissions": "^2.0.3",
     "react-native-status-bar-height": "^2.4.0",
     "react-native-webview": "^7.4.3"
   },
