--- a/ios/stramplerbande.xcodeproj/xcshareddata/xcschemes/stramplerbande.xcscheme
+++ b/ios/stramplerbande.xcodeproj/xcshareddata/xcschemes/stramplerbande.xcscheme
@@ -29,8 +29,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "stramplerbande.app"
-               BlueprintName = "stramplerbande"
+               BuildableName = "sbdemo.app"
+               BlueprintName = "stramplerbandedemo"
                ReferencedContainer = "container:stramplerbande.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -59,8 +59,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "stramplerbande.app"
-            BlueprintName = "stramplerbande"
+            BuildableName = "sbdemo.app"
+            BlueprintName = "stramplerbandedemo"
             ReferencedContainer = "container:stramplerbande.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -92,8 +92,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "stramplerbande.app"
-            BlueprintName = "stramplerbande"
+            BuildableName = "sbdemo.app"
+            BlueprintName = "stramplerbandedemo"
             ReferencedContainer = "container:stramplerbande.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -109,8 +109,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "stramplerbande.app"
-            BlueprintName = "stramplerbande"
+            BuildableName = "sbdemo.app"
+            BlueprintName = "stramplerbandedemo"
             ReferencedContainer = "container:stramplerbande.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
