--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,7 +1,7 @@
 platform :ios, '9.0'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
-target 'stramplerbande' do
+target 'stramplerbandedemo' do
   # Pods for stramplerbande
   pod 'Firebase/Analytics'
   pod 'FBLazyVector', :path => "../node_modules/react-native/Libraries/FBLazyVector"
