--- a/ios/GoogleService-Info.plist
+++ b/ios/GoogleService-Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>396134266611-stqe6us1fuqruut8nsti9tm5b8dm2v67.apps.googleusercontent.com</string>
+	<string>396134266611-0gogg0tb6uestd9oruet3puf9ci2r11e.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.396134266611-stqe6us1fuqruut8nsti9tm5b8dm2v67</string>
+	<string>com.googleusercontent.apps.396134266611-0gogg0tb6uestd9oruet3puf9ci2r11e</string>
 	<key>API_KEY</key>
 	<string>AIzaSyAI7bhr1mCXcaW9S3EpPtAKIVD9zAFdaSs</string>
 	<key>GCM_SENDER_ID</key>
@@ -13,7 +13,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>org.reactjs.native.example.stramplerbande</string>
+	<string>org.reactjs.native.stramplerbande</string>
 	<key>PROJECT_ID</key>
 	<string>stramplerbande-d7bd4</string>
 	<key>STORAGE_BUCKET</key>
@@ -29,7 +29,7 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:396134266611:ios:5d2076273e000d7dc0a986</string>
+	<string>1:396134266611:ios:b92795d6a1a5fedfc0a986</string>
 	<key>DATABASE_URL</key>
 	<string>https://stramplerbande-d7bd4.firebaseio.com</string>
 </dict>
