--- a/ios/stramplerbande/stramplerbande.entitlements
+++ b/ios/stramplerbande/stramplerbande.entitlements
@@ -6,7 +6,7 @@
 	<string>development</string>
 	<key>keychain-access-groups</key>
 	<array>
-		<string>$(AppIdentifierPrefix)org.reactjs.native.example.stramplerbande</string>
+		<string>$(AppIdentifierPrefix)org.reactjs.native.klixters-test</string>
 	</array>
 </dict>
 </plist>
